package com.diguage.didp.proxy;

/**
 * Subject类，定义了 {@link RealSubject} 和 {@link Proxy} 的共用接口。
 *
 * @author D瓜哥, https://www.diguage.com/
 * @since 2017-05-16
 */
public interface Subject {
  void request();
}
